--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/business_description"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorAccent"
         android:textSize="36sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
@@ -55,7 +55,7 @@
         android:layout_height="wrap_content"
         android:text="@string/business_active_hours"
         android:textAppearance="?android:textAppearanceMedium"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
