--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:contentDescription="@string/image_desc"
         android:scaleType="centerCrop"
         android:src="@drawable/glass_chessboard_set_pexels" />
 
@@ -18,8 +19,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/business_name"
-        android:textAppearance="?android:textAppearanceMedium"
         android:textColor="@android:color/holo_blue_light"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -54,8 +55,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/business_active_hours"
-        android:textAppearance="?android:textAppearanceMedium"
         android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
